@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2017, 2018 Laboratoire de Recherche et Développement de
+# Copyright (C) 2017, 2018, 2020 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -30,7 +30,7 @@ grep 'spot: BDD package initialized' err
 # This value below, which is the number of time we need to garbage
 # collect might change if we improve the tool or change the way BuDDy
 # is initialized.
-test 63 = `grep -c 'spot: BDD GC' err`
+test 11 = `grep -c 'spot: BDD GC' err`
 # Minimal size for this automaton.
 # See also https://www.lrde.epita.fr/dload/spot/mochart10-fixes.pdf
 test "147,207" = `autfilt --stats=%s,%e out`
